Working Version with Reports

--- a/package.json
+++ b/package.json
@@ -9,26 +9,36 @@
     "chromeTest": "npm run test --browser chrome",
     "recordDashBoardTest": "npx cypress run --record --key 79694452-a67b-4573-9699-339617205423",
     "GreenKartTest": "npx cypress run --spec \"cypress/e2e/UI/GreenKart/*\"",
-    "SmokeTest": "npx cypress run --spec \"cypress/e2e/UI/GreenKart/Test1.js\""
+    "SmokeTest": "npx cypress run --spec \"cypress/e2e/UI/GreenKart/Test1.js\"",
+    "testbdd": "npx cypress run --spec \"cypress/e2e/BDD/features/ecommerce.feature\" && node cucumber-html-report.js"
   },
+
   "author": "Tim Gonella",
   "license": "ISC",
   "devDependencies": {
-    "@badeball/cypress-cucumber-preprocessor": "^17.2.1",
-    "@cypress/browserify-preprocessor": "^3.0.2",
     "cypress": "^13.15.2",
     "cypress-mochawesome-reporter": "^3.8.2",
     "mocha": "^10.1.0",
     "multiple-cucumber-html-reporter": "^3.0.1",
     "neat-csv": "5.1.0",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
+    "typescript": "^5.8.3",
+    "@badeball/cypress-cucumber-preprocessor": "latest",
     "@eslint/js": "^9.29.0",
-    "cypress": "^13.0.0",
     "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.8.2",
     "eslint": "^9.29.0",
     "eslint-plugin-cypress": "^5.1.0"
+  },
+    "cypress-cucumber-preprocessor": {
+    "stepDefinitions": "cypress/e2e/BDD/step_definitions/*.js",
+    "filterSpecs":true,
+    "omitFiltered": true,
+    "json": {
+      "enabled": true,
+      "output":"cypress/cucumberReport/results.json"
+    }
+  },
+  "dependencies": {
+
   }
 }
